# si26-reviewer-bryan

./: .gitignore  AGENTS.md  CONTEXT.md  GOALS.md  README.md  docker-compose.dev.yml
docs/adr/: 0001-reposition-around-deck-specific-critique.md  0002-two-track-eval-synthetic-and-real-fixtures.md
docs/superpowers/plans/: 2026-07-02-phase-1-foundation.md  2026-07-06-phase-2-ingestion.md  2026-07-20-phase-3-extraction-matrix.md  2026-07-20-phase-4-reviewers-verification.md  (+4 more)
web/: .env.example  .env.production.notes.md  package-lock.json  package.json  vitest.config.ts
web/drizzle/: 0000_greedy_shatterstar.sql  0001_orange_newton_destine.sql  0002_shocking_justin_hammer.sql  0003_fuzzy_dexter_bennett.sql  0004_famous_silver_surfer.sql  0005_cuddly_hercules.sql  0006_polite_vulcan.sql  0007_melted_harpoon.sql
web/src/: auth.ts
worker/: Dockerfile  pyproject.toml  run-local.sh
worker/blob_helper/: package-lock.json  package.json  put.mjs
worker/src/worker/: blob.py  db.py  extract.py  ingest.py  jobs.py  main.py  mapping.py  orchestrate.py  pipeline.py  reviewers.py  script_align.py  verify.py  vision.py
worker/src/worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
worker/tests/: conftest.py  test_blob.py  test_extract.py  test_findings_schema.py  test_ingest.py  test_jobs.py  test_main.py  test_mapping.py  test_orchestrate.py  test_pipeline.py  test_requirements_schema.py  test_reviewers.py  test_script_align.py  test_summaries_schema.py  test_verify.py  test_vision.py
worker/tests/fixtures/: sample_deck.pptx  script_marked.txt  script_unmarked.txt
(+48 files in other folders)
